--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jose Arguello",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.0",
     "nodemon": "^1.19.2"
